--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "startnow-react200-budget-tracker",
+  "name": "react200-budget-tracker",
   "version": "1.0.0",
   "description": "React/Redux Budget Tracker",
   "main": "server/index.js",
